test/fail_compilation/fail334.d

struct S
{
    @property int foo(int a, int b) { return 1; }
}

void main()
{
}
